--- a/css/app.css
+++ b/css/app.css
@@ -250,127 +250,10 @@ template, [hidden] {
 
 /**
  * Add the correct display in IE 10. */
-@media screen and (max-width: 800px) {
-  body, html {
-    width: 100vw; }
-    body main, html main {
-      width: 100%;
-      margin: 0;
-      padding: 0; }
-    body .profile, body .resume, body .portfolio, body .contact, html .profile, html .resume, html .portfolio, html .contact {
-      width: 100vw; }
-      body .profile .tag, body .resume .tag, body .portfolio .tag, body .contact .tag, html .profile .tag, html .resume .tag, html .portfolio .tag, html .contact .tag {
-        left: 0;
-        top: 0;
-        width: 100%;
-        justify-content: flex-start; }
-        body .profile .tag img, body .resume .tag img, body .portfolio .tag img, body .contact .tag img, html .profile .tag img, html .resume .tag img, html .portfolio .tag img, html .contact .tag img {
-          transform: translate(0, 0);
-          margin: 0 15px; }
-        body .profile .tag h2, body .resume .tag h2, body .portfolio .tag h2, body .contact .tag h2, html .profile .tag h2, html .resume .tag h2, html .portfolio .tag h2, html .contact .tag h2 {
-          display: block; }
-      body .profile.open .tag, body .resume.open .tag, body .portfolio.open .tag, body .contact.open .tag, html .profile.open .tag, html .resume.open .tag, html .portfolio.open .tag, html .contact.open .tag {
-        width: 100%;
-        justify-content: flex-start; }
-        body .profile.open .tag img, body .resume.open .tag img, body .portfolio.open .tag img, body .contact.open .tag img, html .profile.open .tag img, html .resume.open .tag img, html .portfolio.open .tag img, html .contact.open .tag img {
-          transform: translate(0, 0);
-          margin: 0 15px; }
-    body .profile, html .profile {
-      width: 100vw;
-      height: 60px; }
-      body .profile.open, html .profile.open {
-        height: calc(100vh - 180px);
-        min-height: 100%; }
-        body .profile.open .profile-content, html .profile.open .profile-content {
-          display: flex;
-          flex-direction: column;
-          flex-wrap: wrap;
-          padding-top: 75px; }
-          body .profile.open .profile-content .main-info, html .profile.open .profile-content .main-info {
-            width: 100%;
-            margin: 0 auto; }
-          body .profile.open .profile-content .details, html .profile.open .profile-content .details {
-            opacity: 1;
-            transform: translate(0, 0);
-            width: 100%;
-            align-items: flex-start; }
-            body .profile.open .profile-content .details span, html .profile.open .profile-content .details span {
-              text-align: left;
-              width: 100%;
-              padding-left: 30px; }
-          body .profile.open .profile-content .about, html .profile.open .profile-content .about {
-            width: 100%;
-            padding: 15px 30px;
-            display: block; }
-    body .resume .tag.print, html .resume .tag.print {
-      display: none; }
-    body .resume .main-content, html .resume .main-content {
-      padding: 75px 0 15px 0;
-      flex-wrap: wrap; }
-      body .resume .main-content .wrapper, html .resume .main-content .wrapper {
-        width: 100%; }
-        body .resume .main-content .wrapper .education, html .resume .main-content .wrapper .education {
-          padding-top: 15px; }
-        body .resume .main-content .wrapper .education, body .resume .main-content .wrapper .experience, html .resume .main-content .wrapper .education, html .resume .main-content .wrapper .experience {
-          width: 100%;
-          margin-left: 0;
-          border-bottom: none; }
-          body .resume .main-content .wrapper .education .resume_item, body .resume .main-content .wrapper .experience .resume_item, html .resume .main-content .wrapper .education .resume_item, html .resume .main-content .wrapper .experience .resume_item {
-            padding: 0 15px 30px 15px; }
-            body .resume .main-content .wrapper .education .resume_item h4, body .resume .main-content .wrapper .experience .resume_item h4, html .resume .main-content .wrapper .education .resume_item h4, html .resume .main-content .wrapper .experience .resume_item h4 {
-              letter-spacing: 2px; }
-            body .resume .main-content .wrapper .education .resume_item .side-text, body .resume .main-content .wrapper .experience .resume_item .side-text, html .resume .main-content .wrapper .education .resume_item .side-text, html .resume .main-content .wrapper .experience .resume_item .side-text {
-              position: static;
-              display: block;
-              opacity: 1;
-              transform: rotate(0);
-              letter-spacing: 15px;
-              text-align: center;
-              margin: 30px 0 45px 0;
-              padding-bottom: 15px;
-              border-bottom: 1px solid #3e3e3e; }
-      body .resume .main-content .skills, html .resume .main-content .skills {
-        width: 100%; }
-        body .resume .main-content .skills h5, html .resume .main-content .skills h5 {
-          letter-spacing: 15px;
-          text-align: center;
-          padding: 30px 0;
-          margin-bottom: 30px;
-          border-bottom: 1px solid #3e3e3e; }
-        body .resume .main-content .skills .front-end, body .resume .main-content .skills .other, body .resume .main-content .skills .graphic, body .resume .main-content .skills .languages, html .resume .main-content .skills .front-end, html .resume .main-content .skills .other, html .resume .main-content .skills .graphic, html .resume .main-content .skills .languages {
-          margin-right: 0;
-          width: 100%; }
-        body .resume .main-content .skills .front-end, body .resume .main-content .skills .other, body .resume .main-content .skills .graphic, html .resume .main-content .skills .front-end, html .resume .main-content .skills .other, html .resume .main-content .skills .graphic {
-          padding: 0 15px 15px 15px; }
-        body .resume .main-content .skills .languages, html .resume .main-content .skills .languages {
-          padding: 0;
-          padding-bottom: 15px; }
-          body .resume .main-content .skills .languages h5, html .resume .main-content .skills .languages h5 {
-            margin: 15px; }
-          body .resume .main-content .skills .languages .lang, html .resume .main-content .skills .languages .lang {
-            text-align: left;
-            padding-left: 15px; }
-    body .portfolio .gallery, html .portfolio .gallery {
-      padding: 75px 0; }
-      body .portfolio .gallery .gallery-item, html .portfolio .gallery .gallery-item {
-        position: static;
-        width: 100%;
-        max-width: 100%; }
-        body .portfolio .gallery .gallery-item img, html .portfolio .gallery .gallery-item img {
-          width: 100%;
-          max-width: 100%;
-          padding: 0 40px 0 10px; }
-    body .contact, html .contact {
-      margin-bottom: 0; }
-      body .contact form, html .contact form {
-        padding: 75px 15px 30px 15px;
-        width: 100%; }
-        body .contact form textarea, html .contact form textarea {
-          margin-bottom: 30px; }
-        body .contact form button, html .contact form button {
-          margin: 0 auto; }
-        body .contact form input, body .contact form textarea, html .contact form input, html .contact form textarea {
-          padding-left: 15px; } }
+html, body {
+  width: 100%;
+  margin: 0;
+  padding: 0; }
 
 html {
   color: #646464; }
@@ -398,7 +281,7 @@ main {
   background-color: #242528;
   max-width: 70%;
   height: 200px;
-  margin: auto; }
+  margin: 7% auto; }
 
 a {
   color: inherit; }
@@ -422,7 +305,7 @@ a {
 .gallery-item {
   max-width: calc(100% / 2 - 10px);
   max-height: 360px;
-  min-width: 380px;
+  min-width: 330px;
   overflow: hidden;
   position: relative;
   margin: 5px;
@@ -789,3 +672,142 @@ form {
       form button .arrow img {
         width: 30px;
         margin: 7px 0; }
+
+@media screen and (max-width: 1024px) {
+  main {
+    width: 100%;
+    margin: 0;
+    padding: 0; }
+    main .profile, main .resume, main .portfolio, main .contact {
+      width: 95%;
+      margin: 0 auto; }
+    main .profile.open .profile-content {
+      display: flex;
+      flex-wrap: wrap; }
+      main .profile.open .profile-content .about, main .profile.open .profile-content .details, main .profile.open .profile-content .main-info {
+        width: 100%; }
+      main .profile.open .profile-content .details {
+        align-items: flex-start;
+        margin-bottom: 30px; }
+        main .profile.open .profile-content .details span {
+          text-align: left; } }
+
+@media screen and (max-width: 900px) {
+  main {
+    width: 100%;
+    min-width: 100%; }
+    main .profile, main .resume, main .portfolio, main .contact {
+      width: 100%; }
+      main .profile .tag, main .resume .tag, main .portfolio .tag, main .contact .tag {
+        left: 0;
+        top: 0;
+        width: 100%;
+        justify-content: flex-start; }
+        main .profile .tag img, main .resume .tag img, main .portfolio .tag img, main .contact .tag img {
+          transform: translate(0, 0);
+          margin: 0 15px; }
+        main .profile .tag h2, main .resume .tag h2, main .portfolio .tag h2, main .contact .tag h2 {
+          display: block; }
+      main .profile.open .tag, main .resume.open .tag, main .portfolio.open .tag, main .contact.open .tag {
+        width: 100%;
+        justify-content: flex-start; }
+        main .profile.open .tag img, main .resume.open .tag img, main .portfolio.open .tag img, main .contact.open .tag img {
+          transform: translate(0, 0);
+          margin: 0 15px; }
+    main .profile {
+      width: 100vw;
+      height: 60px; }
+      main .profile.open {
+        height: auto;
+        min-height: 100%; }
+        main .profile.open .profile-content {
+          display: flex;
+          flex-direction: column;
+          flex-wrap: wrap;
+          padding-top: 75px; }
+          main .profile.open .profile-content .main-info {
+            width: 100%;
+            margin: 0 auto; }
+          main .profile.open .profile-content .details {
+            opacity: 1;
+            transform: translate(0, 0);
+            width: 100%;
+            align-items: flex-start; }
+            main .profile.open .profile-content .details span {
+              text-align: left;
+              width: 100%;
+              padding-left: 30px; }
+          main .profile.open .profile-content .about {
+            width: 100%;
+            padding: 15px 30px;
+            display: block; }
+    main .resume .tag.print {
+      display: none; }
+    main .resume .main-content {
+      padding: 75px 0 15px 0;
+      flex-wrap: wrap; }
+      main .resume .main-content .wrapper {
+        width: 100%;
+        border: none; }
+        main .resume .main-content .wrapper .education {
+          padding-top: 15px; }
+        main .resume .main-content .wrapper .education, main .resume .main-content .wrapper .experience {
+          width: 100%;
+          margin-left: 0;
+          border-bottom: none; }
+          main .resume .main-content .wrapper .education .resume_item, main .resume .main-content .wrapper .experience .resume_item {
+            padding: 0 15px 30px 15px; }
+            main .resume .main-content .wrapper .education .resume_item h4, main .resume .main-content .wrapper .experience .resume_item h4 {
+              letter-spacing: 2px; }
+            main .resume .main-content .wrapper .education .resume_item .side-text, main .resume .main-content .wrapper .experience .resume_item .side-text {
+              position: static;
+              display: block;
+              opacity: 1;
+              transform: rotate(0);
+              letter-spacing: 15px;
+              text-align: center;
+              margin: 30px 0 45px 0;
+              padding-bottom: 15px;
+              border-bottom: 1px solid #3e3e3e; }
+      main .resume .main-content .skills {
+        width: 100%; }
+        main .resume .main-content .skills h5 {
+          letter-spacing: 15px;
+          text-align: center;
+          padding: 30px 0;
+          margin-bottom: 30px;
+          border-bottom: 1px solid #3e3e3e; }
+        main .resume .main-content .skills .front-end, main .resume .main-content .skills .other, main .resume .main-content .skills .graphic, main .resume .main-content .skills .languages {
+          margin-right: 0;
+          width: 100%; }
+        main .resume .main-content .skills .front-end, main .resume .main-content .skills .other, main .resume .main-content .skills .graphic {
+          padding: 0 15px 15px 15px; }
+        main .resume .main-content .skills .languages {
+          padding: 0;
+          padding-bottom: 15px; }
+          main .resume .main-content .skills .languages h5 {
+            margin: 15px; }
+          main .resume .main-content .skills .languages .lang {
+            text-align: left;
+            padding-left: 15px; }
+    main .portfolio .gallery {
+      padding: 75px 0; }
+      main .portfolio .gallery .gallery-item {
+        position: static;
+        width: 100%;
+        max-width: 360px; }
+        main .portfolio .gallery .gallery-item img {
+          width: 100%;
+          max-width: 100%;
+          padding: 0 40px 0 10px; }
+    main .contact {
+      margin-bottom: 0; }
+      main .contact form {
+        padding: 75px 15px 30px 15px;
+        width: 100%; }
+        main .contact form textarea {
+          margin-bottom: 30px; }
+        main .contact form button {
+          margin: 0 auto; }
+        main .contact form input, main .contact form textarea {
+          padding-left: 15px; } }
