--- a/css/app.css
+++ b/css/app.css
@@ -672,7 +672,9 @@ form {
   form .submit {
     height: 44px;
     width: 44px;
-    position: relative; }
+    position: relative;
+    border: 1px solid #fff;
+    background-color: #242528; }
     form .submit .arrow {
       height: 44px;
       transform: translate(-15px, 0);
@@ -685,12 +687,6 @@ form {
       form .submit .arrow img {
         width: 30px;
         margin: 7px 0; }
-    form .submit input[type=submit] {
-      width: 100%;
-      height: 100%;
-      border: 1px solid #fff;
-      background-color: #242528;
-      outline: none; }
 
 @media screen and (max-width: 1024px) {
   main {
