--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -105,6 +105,10 @@
           width: 100%
           padding: 30px 20% 30px 0
           position: relative
+          .additional_txt
+            letter-spacing: 4px
+            color: inherit
+            font-size: inherit
           h4
             color: $white
             letter-spacing: 10px
@@ -234,7 +238,7 @@ form
     resize: none
     padding: 1px 0px
     height: 100px
-    
+
   .submit
     height: 44px
     width: 44px
